# aoc2022-day24-haskell

./: LICENSE  day24.cabal
app/: Main.hs
